navbar works on all pages and finally fixed wierd shifting

--- a/public/stylesheets/articles.css
+++ b/public/stylesheets/articles.css
@@ -1,56 +1,12 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
-    padding: 0;
     background-color: #f9f9f9;
     color: #2b3e50;
-}
-
-
-/* Navigation bar styling */
-/* nav {
-    background-color: rgb(218, 231, 223); 
-    width: 100%; 
-    position: fixed; 
-    top: 0;
-    left: 0;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    z-index: 1000; 
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
-    color: #000000;
-    text-decoration: none;
-    font-family: 'Times New Roman', Times, serif;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-nav ul li a:hover {
-    background-color: rgb(235, 242, 238);
-} */
-
-.nav-title {
-    font-size: 40px;
-    color: #000000;
-    font-weight: bold;
-    margin-top: 3px;
-}
-
-body {
     padding-top: 80px; 
 }
 
@@ -81,11 +37,6 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 100%;
-}
-
-.navbar .nav-link {
-    color: black; /* Default color when transparent */
-    transition: color 0.3s ease-in-out; /* Smooth transition */
 }
 
 .article-button {
