--- a/public/stylesheets/font.css
+++ b/public/stylesheets/font.css
@@ -4,26 +4,84 @@ body {
     font-family: 'Poppins', sans-serif; /* Set a default font */
 }
 
-.navbar .nav-link {
-    font-family: 'Poppins', sans-serif;
-}
-
 #navlogo {
     margin-right: 10px; 
     height: 50px; 
     width: 50px; 
 }
 
+ul {
+    list-style-type: none; 
+    margin: 0; 
+    padding: 0; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+}
+
+li {
+    margin-right: 20px; 
+}
+
+/* 
+.nav-title {
+    font-size: 40px;
+    color: #000000;
+    font-weight: bold;
+    margin-top: 3px;
+} */
+
+nav {
+    display: flex;
+    justify-content: space-around; 
+    align-items: center; 
+    height: 80px; 
+    padding: 0 20px; 
+    position:fixed;
+    width:100%;
+    border-bottom: #000000;
+    /* margin-left:-25px; */
+}
+
+
 .nav-title {
     border: 2px solid #000000; 
     padding: 5px 10px; 
     border-radius: 2px; 
     background-color: white; 
+    margin-top: 3px;
     font-size: 40px; 
     font-weight: bold;
     color: #333; 
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* margin-left: auto;
+    margin-right: auto; */
     font-family: 'Times New Roman', Times, serif;
+}
+
+.homelink {
+    width: 106.61px;
+}
+
+.navbar .nav-link {
+    font-family: 'Poppins', sans-serif;
+    color: black; /* Default color when transparent */
+    transition: color 0.3s ease-in-out; /* Smooth transition */
+}
+
+.navbar.bg-transparent {
+    background-color: transparent !important;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.navbar.bg-scrolled {
+    background-color: rgba(255, 255, 255, 0.9) !important; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.navbar.bg-scrolled .nav-link {
+    color: black !important;
 }
