--- a/public/stylesheets/opportunities.css
+++ b/public/stylesheets/opportunities.css
@@ -1,9 +1,14 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     padding-top: 100px;
     font-family: Arial, sans-serif;
     margin-left: 20px;
     margin-right: 20px;
 }
+
 h2 {
     margin-bottom: 20px;
 }
@@ -17,80 +22,31 @@ h2 {
     text-decoration: none;
     border-radius: 5px;
 }
+
 .opportunity-button:hover {
     background-color: #218838;
 }
 
-/* nav {
-    /* background-color: rgb(218, 231, 223); 
+button {
     width: 100%; 
-    position: fixed; 
-    top: 0;
-    left: 0;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    z-index: 1000; 
-    height: 80px;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    padding: 0 20px; 
-    width:100%; */
-    /* margin-left:-25px; */
-    /* background-color: rgb(218, 231, 223); 
-    height: 80px;
-    width: 100%; 
-    position: fixed; 
-    vertical-align: middle;
-    top: 0;
-    left: 0;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    z-index: 1000; 
-} */
-
-/* nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav ul li a { */
-    /* color: #000000;
-    vertical-align: middle;
-    text-decoration: none;
-    font-family: 'Times New Roman', Times, serif;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease; */
-    /* text-decoration: none; 
-    color: #333; 
-    padding: 10px 20px; 
-    background-color: transparent; 
+    padding: 15px; 
+    font-size: 18px; 
+    background-color: #4CAF50; 
+    color: white; 
     border: none; 
     border-radius: 5px; 
+    margin-top: 10px; 
+    cursor: pointer; 
+}
 
-    font-size: 16px; 
-    font-family: 'Times New Roman', Times, serif; 
-    transition: color 0.3s; 
-} */
+button:hover {
+    background-color: #45a049; 
+}
 
-/* nav ul li a:hover {
-    background-color: rgb(235, 242, 238);
-} */ 
-
-.nav-title {
+/* .nav-title {
     font-size: 40px;
     color: #000000;
     font-weight: bold;
     margin-top: 3px;
-}
+} */
 
-.navbar .nav-link {
-    color: black; /* Default color when transparent */
-    transition: color 0.3s ease-in-out; /* Smooth transition */
-}
